@@ -2,6 +2,7 @@ Release Note
 
 * 8/29/2014
   * fixed getAnalSitesWithData
+  * added fixedSandbox
 
 * 8/27/2014
   * fixed retryTask for running inputs
